# MotifLab

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  firecrawl_config.yaml.example  image_providers.yaml  image_providers.yaml.example  pyproject.toml  search_providers.yaml.example  start.bat  start.sh  text_providers.yaml  text_providers.yaml.example
.github/workflows/: build-and-push.yml  docker-publish.yml  release.yml
backend/: app.py  config.py  middleware.py
backend/application/: __init__.py
backend/application/core/: base_client.py  base_skill.py
backend/application/pipelines/: __init__.py  concept_pipeline.py  redbook_pipeline.py
backend/application/services/: __init__.py  concept_history_service.py  content_application_service.py  history_application_service.py  image_generation_application_service.py  image_job_application_service.py  knowledge_application_service.py  outline_application_service.py  pipeline_application_service.py  provider_config_service.py  publish_application_service.py  search_application_service.py  template_application_service.py
backend/application/skills/: __init__.py  analyze.py  design.py  generate.py
backend/bootstrap/: __init__.py  container.py  flask_factory.py  logging.py  settings.py  tracing.py
backend/clients/: __init__.py  factory.py
backend/clients/image/: __init__.py  base.py  google_genai.py  image_api.py  openai_compatible.py
backend/clients/text/: __init__.py
backend/config/: __init__.py  service.py  settings.py
backend/core/: __init__.py  base_pipeline.py  base_skill.py  events.py
backend/domain/: __init__.py
backend/domain/ports/: __init__.py  config_store_port.py  history_repository_port.py  image_job_repository_port.py  image_provider_port.py  publish_gateway_port.py  publish_repository_port.py  search_provider_port.py
backend/generators/: dashscope_sdk.py  factory.py  google_genai.py  image_api.py  openai_compatible.py  replicate_gen.py
backend/infrastructure/: __init__.py
backend/infrastructure/clients/: factory.py
backend/infrastructure/concept_history/: __init__.py  adapters.py
backend/infrastructure/gateways/: __init__.py  publish_mcp_gateway.py
backend/infrastructure/generators/: dashscope_edit.py  dashscope_sdk.py  factory.py  google_genai.py  image_api.py  modelscope.py  openai_compatible.py
backend/infrastructure/history/: __init__.py  adapters.py
backend/interfaces/: __init__.py
backend/knowledge/: __init__.py
backend/migrations/: create_history_records.sql  create_xiaohongshu_posts.sql  migrate_local_to_supabase.py  run_migration.py
backend/pipelines/: __init__.py  concept_pipeline.py  redbook_pipeline.py
backend/prompts/: content_prompt.txt  image_prompt.txt  image_prompt_short.txt  outline_image_suggestion_prompt.txt  outline_prompt.txt
backend/routes/: __init__.py  api.py  concept_routes.py  config_routes.py  content_routes.py  firecrawl_routes.py  history_routes.py  image_job_routes.py  image_routes.py  knowledge_routes.py  outline_routes.py  pipeline_routes.py  publish_routes.py  search_routes.py  template_routes.py
backend/services/: concept_history.py  content.py  history.py  image.py  outline.py  pipeline_service.py  publish.py  search_service.py  template.py
backend/skills/: __init__.py  analyze.py  design.py  generate.py
backend/utils/: __init__.py  genai_client.py  mcp_manager.py  supabase_client.py  text_client.py  vibesurf_client.py
data/: template.json
docker/: image_providers.yaml  text_providers.yaml
docs/: ARCHITECTURE.md  backend-rearchitecture-execution-plan.md  firecrawl-remaining-items.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  env.d.ts  main.ts
frontend/src/api/: index.ts
scripts/: install-tools.sh  start-all.sh  start-linux.sh  start-macos.command  start-windows.bat
tests/: conftest.py
(+111 files in other folders)
