[project]
name = "renderai-generator"
version = "0.1.0"
description = "渲染AI 图文生成器"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "dashscope>=1.24.0",
    "replicate>=0.25.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "flask-limiter>=3.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
]
