[project]
name = "renderai-generator"
version = "0.1.0"
description = "渲染AI 图文生成器"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "dashscope>=1.24.0",
    "replicate>=0.25.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "flask-limiter>=3.0.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.2",
    "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.2",
    "mypy>=1.11.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["backend", "tests"]
extend-exclude = [
    "backend/app.py",
    "backend/application/core",
    "backend/application/pipelines",
    "backend/application/skills",
    "backend/bootstrap/__init__.py",
    "backend/config",
    "backend/infrastructure/clients",
    "backend/infrastructure/concept_history",
    "backend/infrastructure/generators",
    "backend/infrastructure/gateways",
    "backend/infrastructure/history",
    "backend/infrastructure/services",
    "backend/knowledge",
    "backend/middleware.py",
    "backend/migrations",
    "backend/routes/concept_routes.py",
    "backend/routes/content_routes.py",
    "backend/routes/history_routes.py",
    "backend/routes/image_routes.py",
    "backend/routes/knowledge_routes.py",
    "backend/routes/outline_routes.py",
    "backend/routes/pipeline_routes.py",
    "backend/routes/publish_routes.py",
    "backend/routes/template_routes.py",
    "backend/utils",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
files = [
    "backend/bootstrap/flask_factory.py",
    "backend/infrastructure/persistence/session.py",
    "backend/infrastructure/persistence/__init__.py",
    "backend/application/services/image_generation_application_service.py",
    "backend/application/services/search_application_service.py",
    "backend/application/services/__init__.py",
    "backend/routes/search_routes.py",
    "backend/routes/config_routes.py",
    "tests/test_database_startup_migration.py",
    "tests/test_image_job_routes.py",
    "tests/test_search_routes.py",
]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
follow_imports = "skip"
disable_error_code = ["import-untyped"]
